# new-york-fed

./: README.md  main.py  pyproject.toml  source.json
.github/workflows/: run.yml
.state/local/: ambs_operations.json  fx_swaps.json  reference_rates.json  repo_operations.json  securities_lending.json  soma_holdings.json  treasury_operations.json
assets/ambs_operations/: ambs_operations.py  schema.json
assets/fx_swaps/: fx_swaps.py  schema.json
assets/primary_dealer_stats/: primary_dealer_stats.py  schema.json
assets/reference_rates/: reference_rates.py  schema.json
assets/repo_operations/: repo_operations.py  schema.json
assets/securities_lending/: schema.json  securities_lending.py
assets/soma_holdings/: schema.json  soma_holdings.py
assets/treasury_operations/: schema.json  treasury_operations.py
data/new-york-fed/ambs_operations/: local-137.parquet
data/new-york-fed/fx_swaps/: local-137.parquet
data/new-york-fed/primary_dealer_stats/: local-137.parquet
data/new-york-fed/reference_rates/: local-134.parquet  local-136.parquet
data/new-york-fed/repo_operations/: local-137.parquet
data/new-york-fed/securities_lending/: local-136.parquet
src/: main.py
src/ingest/: __init__.py  ambs.py  fx_swaps.py  primary_dealer.py  reference_rates.py  repo.py  seclending.py  soma.py  treasury.py
src/nodes/: ambs_operations.py  fx_swaps.py  primary_dealer_stats.py  reference_rates.py  repo_operations.py  securities_lending.py  soma_holdings.py  treasury_operations.py
src/transforms/: __init__.py
src/utils/: __init__.py
(+21 files in other folders)
