[project]
name = "new-york-fed"
version = "0.1.0"
description = "New York Federal Reserve data connector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "tenacity",
    "boto3",
    "ratelimit",
    "duckdb>=1.3.2",
    "requests>=2.32.5",
    "deltalake>=0.17.0",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
dev-dependencies = [
    "psutil>=5.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]
