[project]
name = "new-york-fed"
version = "0.1.0"
description = "New York Federal Reserve data connector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "tenacity",
    "boto3",
    "duckdb",
    "deltalake>=1.3.1",
    "psutil>=7.2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "duckdb",
]
